Fix wrong line spacing for "maintainers"
Fixes https://github.com/flathub/linux-store-frontend/issues/74

--- a/src/app/shared/app-details-extra-info/app-details-extra-info.component.scss
+++ b/src/app/shared/app-details-extra-info/app-details-extra-info.component.scss
@@ -13,9 +13,12 @@
 }
 
 .app-info-item-value{
-  color:black;
   font-size: 13px;
   line-height: 16px;
+}
+
+.app-info-item-value-text{
+  color:black;
 }
 
 
