--- a/src/themes/flathub/flathub-theme.scss
+++ b/src/themes/flathub/flathub-theme.scss
@@ -92,6 +92,23 @@ $linux-store-theme: mat-light-theme($linux-store-primary, $linux-store-accent, $
 
 @include angular-material-theme($linux-store-theme);
 
+.store-link-container{
+  a {
+    color: #4a86cf;
+    transition: color .35s;
+    text-decoration: none;
+    background-color: transparent;
+  }
+
+  a:active, a:visited {
+    color: #4a86cf;
+  }
+  a:hover{
+    text-decoration: underline;
+  }
+}
+
+
 p, li, h6{
   a {
     color: #4a86cf;
